// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      viewId="test_id"
    />
  </PageSection>
</PageLayout>
`;

exports[`RhelView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader>
    Dolor sit
  </PageHeader>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      viewId="test_id"
    />
  </PageSection>
</PageLayout>
`;
